--- a/Homework7/.htaccess
+++ b/Homework7/.htaccess
@@ -1,12 +1,5 @@
-<IfModule mod_rewrite.c>
 RewriteEngine On
-
-# Accept loading of actual files and directories
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-
-# Send everything else to the index page
-RewriteRule ^(.*)$ Index.php?url=$1 [L,QSA]
-
-php_flag display_errors On
-</IfModule>
+RewriteRule ^(.*)$ index.php?url=$1 [L,QSA]
+RewriteRule ^users.html$ Views/Users.html [L]
